--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,6 @@
 
 - Create a seperate user page where people can go and visit their blogs (non-global)
 - Create a page to show your blogs both global and non global
+- liked blogs will throw error if there is no token found, it will work only after logging in
+
+- Add a search functionality instead of theme change mode
