delete account bug fixes, code optimized

--- a/todo.txt
+++ b/todo.txt
@@ -9,7 +9,8 @@
 - Create a page to show your blogs both global and non global ---- ✅
 - liked blogs will throw error if there is no token found, it will work only after logging in ---- ✅
 
-- Add a search functionality instead of theme change mode
+- Add a search functionality 
 - Do error handling of like and dislike blog
 
 - Error handling for "No token found" (main blogs page must not throw this error)
+- Remember that wherever you're getting that please login first error then return and send the user to the login page
