--- a/todo.txt
+++ b/todo.txt
@@ -14,3 +14,5 @@
 
 - Error handling for "No token found" (main blogs page must not throw this error)
 - Remember that wherever you're getting that please login first error then return and send the user to the login page
+
+- The CACHING
