add: delete blog functionality

--- a/todo.txt
+++ b/todo.txt
@@ -17,3 +17,6 @@
 
 - The CACHING
 - Signout functionality ---- ✅
+
+- full text out of page problem
+- Check that revalidateOne - src->action->blog.ts->like function and dislike function
