--- a/todo.txt
+++ b/todo.txt
@@ -20,3 +20,6 @@
 
 - full text out of page problem
 - Check that revalidateOne - src->action->blog.ts->like function and dislike function
+- Imgs to blogs 
+- Imgs to profile
+- Add private / public functionality in update blog
