--- a/todo.txt
+++ b/todo.txt
@@ -12,3 +12,5 @@
 - Check that revalidateOne - src->action->blog.ts->like function and dislike function
 - Imgs to blogs 
 - Imgs to profile
+- check ts ignore of that searchInput which does not render user img
+- Check all consolelogs of the website
